# MireaMyWorks

./: .gitignore  README.md
Sem01/Procedural programming/: CurrentDay.c  FileStringSearcher.c  List.c  Matrix.c  TemperatureConverter.c  TuringMachine.c
Sem01/Procedural programming/FileByteReader/: FileByteReader.c
Sem01/Procedural programming/Stack.Calculator/: Stack.c  Stack.h  main.c
Sem01/Procedural programming/TreeWorker/: main.c  treePrinter.c  treePrinter.h
Sem02/OOP/Lab01/: CMakeLists.txt  Complex.c  Complex.h  main.c
Sem02/OOP/Lab01.1/: CMakeLists.txt  main.cpp
Sem02/OOP/Lab02/: CMakeLists.txt  main.c
Sem02/OOP/Lab03-05/: CMakeLists.txt  Child.cpp  Child.h  Complex.cpp  Complex.h  Tiles.cpp  Tiles.h  Vector.cpp  Vector.h  main.cpp
Sem02/OOP/Lab06/: CMakeLists.txt  main.cpp
Sem02/OOP/Lab07/: Boss.cpp  Boss.h  CMakeLists.txt  Human.cpp  Human.h  Student.cpp  Student.h  main.cpp
Sem02/OOP/Lab08/: CMakeLists.txt  main.cpp
Sem02/OOP/Schedule-Editor/: CMakeLists.txt
Sem02/OOP/Schedule-Editor/include/: Logger.h  WGroup.h  WLesson.h  WMain.h  WSchedule.h
Sem02/OOP/Schedule-Editor/resources/: MIREA_IT_1_2.xlsx  MIREA_IT_2_2.xlsx  orig.xlsx  schedule_template.xlsx
Sem02/OOP/Schedule-Editor/scheduler/: CMakeLists.txt
Sem02/OOP/Schedule-Editor/scheduler/include/: common.h  group_schedule.h  lesson.h  schedule_error.h  scheduler.h  xlsx_file.h
Sem02/OOP/Schedule-Editor/scheduler/resources/: schedule_default_template.xlsx
Sem02/OOP/Schedule-Editor/scheduler/source/: CMakeLists.txt  common.cpp  group_schedule.cpp  lesson.cpp  schedule_error.cpp  scheduler.cpp  xlsx_file.cpp
Sem02/OOP/Schedule-Editor/scheduler/tests/: CMakeLists.txt  test_common.cpp
Sem02/OOP/Schedule-Editor/source/: Logger.cpp  WGroup.cpp  WLesson.cpp  WMain.cpp  WSchedule.cpp  main.cpp
Sem02/OOP/practices/task1/: task1_1.cpp  task1_2.cpp
Sem02/OOP/practices/task2/: task2_1.cpp  task2_2.cpp  task2_3.cpp  task2_4.cpp
Sem02/OOP/practices/task3/: task3_1.cpp  task3_2.cpp  task3_3.cpp  task3_4.cpp  task3_5.cpp
Sem02/OOP/practices/task4/: task4_1.cpp  task4_2.cpp  task4_3.cpp
Sem02/OOP/practices/task5/: task5_1.cpp  task5_2.cpp  task5_3.cpp
Sem02/OOP/practices/task6/: task6_1.cpp  task6_2.cpp
Sem02/OOP/practices/task7/: task7_1.cpp
Sem02/OOP/practices/task8/: task8_1.cpp  task8_2.cpp
Sem02/OOP/reports/: OOP Lab01-08 for print.docx  OOP Lab01.docx  OOP Lab02.docx  OOP Lab06.docx  OOP Lab07.docx  OOP Lab08.docx  OOP Labs003-05.docx  OOP Practices01-08.docx
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab01/task01/: Main.java
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab01/task02/: Main.java
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab01/task03/: Main.java
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab01/task04/: Main.java
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab01/task05/: Main.java
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab02/task01/: Circle.java  CircleTest.java
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab03/task01/: Dash.java  Dish.java  Main.java  Pan.java
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab04/task01/: Animal.java  Car.java  Main.java  Nameable.java  Planet.java
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab05/task02/: Main.java
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab06/task03/: Main.java
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab07/task02/: Main.java
Sem03/OOP/labs/src/ru/mirea/khitrov/labs/lab08/task02/: Main.java
Sem03/OOP/practice/src/ru/mirea/khitrov/practice/practice01/task01/: Ball.java  Main.java
Sem03/OOP/practice/src/ru/mirea/khitrov/practice/practice01/task02/: Book.java  Main.java
Sem03/OOP/practice/src/ru/mirea/khitrov/practice/practice02/task01/: Author.java  TestAuthor.java
Sem03/OOP/practice/src/ru/mirea/khitrov/practice/practice03/task02/: Movable.java  MovableCircle.java  MovablePoint.java  MovableRectangle.java
Sem03/OOP/practice/src/ru/mirea/khitrov/practice/practice04/task01/: GuiExample.java
Sem03/OOP/practice/src/ru/mirea/khitrov/practice/practice05/task02/: Main.java
Sem03/OOP/practice/src/ru/mirea/khitrov/practice/practice06/task03/: Student.java
Sem03/OOP/practice/src/ru/mirea/khitrov/practice/practice07/task01/: Card.java  Main.java  Player.java
Sem03/OOP/reports/: Хитров Н.О. ООП Лабы.docx  Хитров Н.О. ООП Практики.docx
Sem03/SDPA/: Lab02.py  Lab03.cpp  Lab04.cpp  Lab05.py  Lab06.cpp  Lab08.py  Lab09.cpp
Sem03/SDPA/Lab11/: Lab11.py  data.txt
Sem03/SDPA/Matrix/: CMakeLists.txt
Sem03/SDPA/Matrix/inc/: Matrix.h  MatrixGui.h  MatrixGuiList.h
Sem03/SDPA/Matrix/src/: MatrixGui.cpp  MatrixGuiList.cpp  main.cpp
Sem03/SDPA/Matrix/test/: AutoTest.h  Test_Matrix.h
